Update Catalan translations

--- a/util/src/main/i18n/translations/command_ca_ES.properties
+++ b/util/src/main/i18n/translations/command_ca_ES.properties
@@ -15,6 +15,10 @@ command.invalidNumber = Número invàlid ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Ús\: {0}
 
+command.alternativeUsage = En lloc d''això, pots provar {0}
+
+command.clickToRun = Feu clic per executar {0}
+
 command.unknownError.user = S'ha produït un error desconegut. Si us plau, notifica-ho a un administrador.
 
 command.unknownError.staff = S'ha produït un error desconegut. Si us plau accedeixi a la consola del servidor.
@@ -24,6 +28,7 @@ command.onlyPlayers = Has de ser un jugador per utilitzar aquest comandament.
 # {0} = module name (proper noun)
 command.moduleNotFound = El mòdul {0} no està en ús en aquesta partida
 
+command.matchNotStarted = La partida ha de començar abans d'utilitzar aquesta ordre.
 
 command.noTeams = Els equips no estan en ús a aquesta partida
 
@@ -67,26 +72,47 @@ command.simplePageHeader = {0} de {1}
 # {1} = total number of pages
 command.invalidPage = No hi ha pàgina {0}. Les pàgines van de 1 a {1}.
 
+command.conditionUnmet = Condició Incomplerta
 
+command.monumentModes = Mode de monuments
 
+command.nextMode = Següent mode\:
 
+command.modesPushed = S'han impulsat els modes afectats
 
 # time moved ahead (e.g. Affected modes have been pushed forwards by 2:32)
+command.modesPushedForwards = enrrere
 
 # time moved backwards (e.g. Affected modes have been pushed back by 2:32)
+command.modesPushedBack = torna
 
 # amount of time a mode was pushed (e.g. by 1:00)
+command.modesPushedBy = per
 
 # {0} = mode name (e.g. GOLD, Glass Mode)
+command.selectedModePushed = {0} començarà dintre de
 
 # amount of time remaining (e.g. 1:00 left)
+command.timeLeft = restant
 
 # {0} = number of players online
+command.list.online = Usuaris en total connectats\: {0}
 
+command.list.teams = Equips\:
 
+command.list.participants = Participants
 
 # {0} = command name
+command.message.noReply = No s''ha trobat cap missatge per respondre, utilitzeu {0}
+
+# {0} = player name
+command.message.blocked = En aquest moment {0} no esta acceptant missatges.
+
+# {0} = map name
+command.maps.hover = Clica per veure {0}
+
 
 # {0} = player name
 
-# {0} = map name
+# {0} = command name
+
