Update Arabic translations

--- a/util/src/main/i18n/translations/command_ar_SA.properties
+++ b/util/src/main/i18n/translations/command_ar_SA.properties
@@ -14,6 +14,8 @@ command.invalidNumber = عدد غير صالح ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = الاستخدام\: {0}
 
+
+
 command.unknownError.user = حدث خطأ غير معروف. الرجاء إعلام مسؤول.
 
 command.unknownError.staff = خطأ غير معروف قد حدث. الرجاء العودة الى وحدة تحكم السيرفر.
@@ -88,3 +90,9 @@ command.invalidPage = لا يوجد الصفحة {0}. تشغيل الصفحات 
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
