Update Danish translations

--- a/util/src/main/i18n/translations/command_da_DK.properties
+++ b/util/src/main/i18n/translations/command_da_DK.properties
@@ -14,6 +14,8 @@ command.invalidNumber = Ugyldigt nummer ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Brug\: {0}
 
+
+
 command.unknownError.user = Der opstod en ukendt fejl. Kontakt venligst en administrator.
 
 command.unknownError.staff = Der opstod en ukendt fejl. Se serverkonsollen.
@@ -88,3 +90,9 @@ command.invalidPage = Der er ingen side {0}. Siderne løber fra 1 til {1}.
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
