Update German translations

--- a/util/src/main/i18n/translations/command_de_DE.properties
+++ b/util/src/main/i18n/translations/command_de_DE.properties
@@ -15,6 +15,10 @@ command.invalidNumber = Ungültige Zahl ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Verwendung\: {0}
 
+command.alternativeUsage = Du kannst stattdessen {0} versuchen
+
+command.clickToRun = Klick, um {0} auszuführen
+
 command.unknownError.user = Ein unbekannter Fehler ist aufgetreten. Bitte benachrichtige einen Administrator.
 
 command.unknownError.staff = Ein unbekannter Fehler ist aufgetreten. Bitte sieh in die Server-Konsole.
@@ -106,3 +110,9 @@ command.message.blocked = {0} akzeptiert momentan keine Nachrichten.
 
 # {0} = map name
 command.maps.hover = Klick, um {0} anzusehen
+
+
+# {0} = player name
+
+# {0} = command name
+
