Update Hungarian translations

--- a/util/src/main/i18n/translations/command_hu_HU.properties
+++ b/util/src/main/i18n/translations/command_hu_HU.properties
@@ -12,6 +12,8 @@
 
 
 
+
+
 # {0} = module name (proper noun)
 
 
@@ -64,3 +66,9 @@
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
