Update Italian translations

--- a/util/src/main/i18n/translations/command_it_IT.properties
+++ b/util/src/main/i18n/translations/command_it_IT.properties
@@ -2,7 +2,7 @@
 command.notJoinedServer = {0} non è ancora entrato nel server.
 
 # {0} = command argument (could be any string)
-command.numberExpected = E'' previsto numero al posto di ''{0}''
+command.numberExpected = Previsto numero al posto di ''{0}''
 
 command.emptyResult = Nessun risultato
 
@@ -15,6 +15,10 @@ command.invalidNumber = Numero non valido ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Modalità d''uso\: {0}
 
+command.alternativeUsage = Puoi provare a usare {0}
+
+command.clickToRun = Clicca per eseguire {0}
+
 command.unknownError.user = Si è verificato un errore sconosciuto. Si prega di avvisare un amministratore.
 
 command.unknownError.staff = Si è verificato un errore sconosciuto. Per favore fai riferimento alla console del server.
@@ -24,6 +28,7 @@ command.onlyPlayers = Devi essere un giocatore per usare questo comando.
 # {0} = module name (proper noun)
 command.moduleNotFound = Il modulo {0} non è in uso per questa partita
 
+command.matchNotStarted = La partita deve iniziare prima di usare questo comando.
 
 command.noTeams = Le squadre non sono in uso per questa partita
 
@@ -67,19 +72,28 @@ command.simplePageHeader = {0} di {1}
 # {1} = total number of pages
 command.invalidPage = La pagina {0} non esiste. Le pagine vanno da 1 a {1}.
 
+command.conditionUnmet = Condizione Unmet
 
+command.monumentModes = Modalità monumento
 
+command.nextMode = Modalità Successiva\:
 
+command.modesPushed = Le modalità affette sono state forzate
 
 # time moved ahead (e.g. Affected modes have been pushed forwards by 2:32)
+command.modesPushedForwards = avanti
 
 # time moved backwards (e.g. Affected modes have been pushed back by 2:32)
+command.modesPushedBack = indietro
 
 # amount of time a mode was pushed (e.g. by 1:00)
+command.modesPushedBy = di
 
 # {0} = mode name (e.g. GOLD, Glass Mode)
+command.selectedModePushed = {0} inizierà tra
 
 # amount of time remaining (e.g. 1:00 left)
+command.timeLeft = rimasti
 
 # {0} = number of players online
 command.list.online = Online Totali\: {0}
@@ -96,3 +110,9 @@ command.message.blocked = {0} non accetta messaggi in questo momento.
 
 # {0} = map name
 command.maps.hover = Clicca per vedere {0}
+
+
+# {0} = player name
+
+# {0} = command name
+
