Update Dutch translations

--- a/util/src/main/i18n/translations/command_nl_NL.properties
+++ b/util/src/main/i18n/translations/command_nl_NL.properties
@@ -14,6 +14,8 @@ command.invalidNumber = Ongeldig nummer ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Gebruik\: {0}
 
+
+
 command.unknownError.user = Een onbekende fout is opgetreden. Meld dit alsjeblieft bij een administrator.
 
 command.unknownError.staff = Er is een onbekende fout opgetreden. Raadpleeg de serverconsole.
@@ -88,3 +90,9 @@ command.invalidPage = Er is geen pagina {0}. Pagina''s gaan van 1 tot {1}.
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
