Update Polish translations

--- a/util/src/main/i18n/translations/command_pl_PL.properties
+++ b/util/src/main/i18n/translations/command_pl_PL.properties
@@ -14,6 +14,8 @@ command.invalidNumber = Nieprawidłowy numer ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Sposób użycia\: {0}
 
+
+
 command.unknownError.user = Wystąpił nieznany błąd. Poinformuj administratora.
 
 command.unknownError.staff = Wystąpił nieznany błąd. Proszę odnieść się do konsoli serwera.
@@ -89,3 +91,9 @@ command.invalidPage = Strona {0} nie istnieje. Dostępne strony od 1 do {1}.
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
