--- a/util/src/main/i18n/translations/command_no_NO.properties
+++ b/util/src/main/i18n/translations/command_no_NO.properties
@@ -15,6 +15,8 @@ command.invalidNumber = Ugyldig tall ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Bruk\: {0}
 
+
+
 command.unknownError.user = En ukjent feil oppstod. Vennligst informer en administrator.
 
 command.unknownError.staff = Det oppstod en ukjent feil. Se serverkonsollen.
@@ -96,3 +98,9 @@ command.message.blocked = {0} tar ikke imot meldinger for øyeblikket.
 
 # {0} = map name
 command.maps.hover = Klikk for å se {0}
+
+
+# {0} = player name
+
+# {0} = command name
+
