Update Russian translations

--- a/util/src/main/i18n/translations/command_ru_RU.properties
+++ b/util/src/main/i18n/translations/command_ru_RU.properties
@@ -2,7 +2,7 @@
 command.notJoinedServer = {0} никогда не заходил на сервер.
 
 # {0} = command argument (could be any string)
-command.numberExpected = Ожидаемое число на месте ''{0}''
+command.numberExpected = На месте ''{0}'' должно быть число
 
 command.emptyResult = Пустой результат
 
@@ -14,6 +14,10 @@ command.invalidNumber = Неверное число ''{0}''
 
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Использование\: {0}
+
+command.alternativeUsage = Попробуйте команду {0} вместо текущей
+
+command.clickToRun = Нажмите для выполнения {0}
 
 command.unknownError.user = Произошла неизвестная ошибка. Пожалуйста, сообщите администратору.
 
@@ -106,3 +110,12 @@ command.message.blocked = У игрока {0} отключены личные с
 
 # {0} = map name
 command.maps.hover = Нажмите для просмотра {0}
+
+command.noResults = Результаты не найдены\!
+
+# {0} = player name
+command.message.friendsOnly = Вы должны быть друзьями с {0} для отправки сообщения
+
+# {0} = command name
+command.message.disabled = Вы не можете отправить сообщение, используйте {0} для изменения
+
