Update Swedish translations

--- a/util/src/main/i18n/translations/command_sv_SE.properties
+++ b/util/src/main/i18n/translations/command_sv_SE.properties
@@ -15,6 +15,8 @@ command.invalidNumber = Ogiltigt tal ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Användning\: {0}
 
+
+
 command.unknownError.user = Ett okänt fel inträffade. Vänligen meddela en administratör.
 
 command.unknownError.staff = Ett okänt fel har uppstått. Se serverkonsolen.
@@ -105,3 +107,9 @@ command.message.blocked = {0} accepterar inte meddelanden just nu.
 
 # {0} = map name
 command.maps.hover = Klicka för att visa {0}
+
+
+# {0} = player name
+
+# {0} = command name
+
