Update Chinese Simplified translations

--- a/util/src/main/i18n/translations/command_zh_CN.properties
+++ b/util/src/main/i18n/translations/command_zh_CN.properties
@@ -14,6 +14,8 @@ command.invalidNumber = 无效数字 ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = 用法：{0}
 
+
+
 command.unknownError.user = 系统出现未知错误，请通知管理员。
 
 command.unknownError.staff = 未知错误出现。请参阅伺服器控制台。
@@ -88,3 +90,9 @@ command.invalidPage = 没有页面{0}。页数从1到{1} 运行。
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
