Update Galician translations

--- a/util/src/main/i18n/translations/command_gl_ES.properties
+++ b/util/src/main/i18n/translations/command_gl_ES.properties
@@ -14,6 +14,8 @@ command.invalidNumber = Número non válido ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Uso\: {0}
 
+
+
 command.unknownError.user = Aconteceu un erro descoñecido. Por favor notifíqueo a un administrador.
 
 command.unknownError.staff = Produciuse un erro descoñecido. Por favor consulte á consola do servidor.
@@ -88,3 +90,9 @@ command.invalidPage = Non hai páxina {0}. As páxinas van de 1 a {1}.
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
