Update Portuguese, Brazilian translations

--- a/util/src/main/i18n/translations/command_pt_BR.properties
+++ b/util/src/main/i18n/translations/command_pt_BR.properties
@@ -14,6 +14,8 @@ command.invalidNumber = Número inválido ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Use\: {0}
 
+
+
 command.unknownError.user = Ocorreu um erro desconhecido. Por favor, notifique um administrador.
 
 command.unknownError.staff = Ocorreu um erro desconhecido. Por favor consulte o console.
@@ -88,3 +90,9 @@ command.invalidPage = Não há nenhuma página {0}. Somente página 1 até {1}.
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
