Update Spanish, Chile translations

--- a/util/src/main/i18n/translations/command_es_CL.properties
+++ b/util/src/main/i18n/translations/command_es_CL.properties
@@ -15,6 +15,8 @@ command.invalidNumber = Número inválido ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Uso\: {0}
 
+
+
 command.unknownError.user = Se produjo un error desconocido. Por favor notifica a un administrador.
 
 command.unknownError.staff = Se produjo un error desconocido. Por favor, revisa la consola del servidor.
@@ -70,6 +72,7 @@ command.invalidPage = No hay página {0}. Éstas van desde la 1 a la {1}.
 
 command.conditionUnmet = Condición no cumplida
 
+command.monumentModes = Modos de monumento
 
 command.nextMode = Siguiente modo\:
 
@@ -105,3 +108,9 @@ command.message.blocked = {0} tiene los mensajes desactivados.
 
 # {0} = map name
 command.maps.hover = Click para ver {0}
+
+
+# {0} = player name
+
+# {0} = command name
+
