--- a/util/src/main/i18n/translations/command_ms_MY.properties
+++ b/util/src/main/i18n/translations/command_ms_MY.properties
@@ -14,6 +14,8 @@ command.invalidNumber = Nombor {0} tidak sah
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Pengunaan\: {0}
 
+
+
 command.unknownError.user = Kesilapan tidak diketahui telah muncul. Sila hubungi seorang pentadbir.
 
 command.unknownError.staff = Sesuatu kesilapan tidak diketahui telah muncul. Sila rujuk kepada konsol server.
@@ -88,3 +90,9 @@ command.invalidPage = Tiada muka surat {0}. Hanya ada muka surat 1 hingga {1}.
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
