--- a/util/src/main/i18n/translations/command_en_GB.properties
+++ b/util/src/main/i18n/translations/command_en_GB.properties
@@ -15,6 +15,8 @@ command.invalidNumber = Invalid number ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Usage\: {0}
 
+
+
 command.unknownError.user = An unknown error has occurred. Please notify an administrator.
 
 command.unknownError.staff = An unknown error has occurred. Please refer to the server console.
@@ -70,6 +72,7 @@ command.invalidPage = There is no page {0}. Pages run from 1 to {1}.
 
 command.conditionUnmet = Condition Unmet
 
+command.monumentModes = Monument Modes
 
 command.nextMode = Next Mode\:
 
@@ -105,3 +108,9 @@ command.message.blocked = {0} is not accepting messages at this time.
 
 # {0} = map name
 command.maps.hover = Click to view {0}
+
+
+# {0} = player name
+
+# {0} = command name
+
