Update Tagalog translations

--- a/util/src/main/i18n/translations/command_tl_PH.properties
+++ b/util/src/main/i18n/translations/command_tl_PH.properties
@@ -11,6 +11,8 @@ command.emptyResult = Walang resulta
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Pag-gagamit\: {0}
 
+
+
 command.unknownError.user = Nagkaroon ng problema. Tumawag ng administrator.
 
 
@@ -77,3 +79,9 @@ command.invalidPage = Walang pahina {0}. Ang mga pahina ay tumatakbo mula sa 1 h
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
