--- a/util/src/main/i18n/translations/command_en_PT.properties
+++ b/util/src/main/i18n/translations/command_en_PT.properties
@@ -14,6 +14,8 @@ command.invalidNumber = {0} ain''t th'' right numb''r
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Yar\! Ye use it like this\: {0}
 
+
+
 command.unknownError.user = An unknown error be happenin'. Ye best be notifyin' a cap'n.
 
 command.unknownError.staff = An unknown error has occurred. Please refer to th' ship console.
@@ -85,3 +87,9 @@ command.invalidPage = Ain''t no {0}. Y''only got 1 to {1}.
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
