Update LOLCAT translations

--- a/util/src/main/i18n/translations/command_lol_US.properties
+++ b/util/src/main/i18n/translations/command_lol_US.properties
@@ -15,6 +15,8 @@ command.invalidNumber = Nu liek da nambah ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Usaj\: {0}
 
+
+
 command.unknownError.user = Sumthin' explode'd. Plz ping a powrful kat.
 
 command.unknownError.staff = Somethin haz gone vry BAD... FIRE\! Go chekc on the console\! 
@@ -24,6 +26,7 @@ command.onlyPlayers = U hav 2 b playin 2 do dis.
 # {0} = module name (proper noun)
 command.moduleNotFound = da {0} modul iz noawt bein usd at dis macht
 
+command.matchNotStarted = da macht muzt begin b4 usin dis cmd.
 
 command.noTeams = No teamz 4 dis macht
 
@@ -67,19 +70,28 @@ command.simplePageHeader = {0} o'' {1}
 # {1} = total number of pages
 command.invalidPage = Ther is nao leaf {0}. leafs r from 1 2 {1}.
 
+command.conditionUnmet = condishun unmaet
 
+command.monumentModes = thingie mods
 
+command.nextMode = nxt mode\:
 
+command.modesPushed = afectd mods haev ben pushd
 
 # time moved ahead (e.g. Affected modes have been pushed forwards by 2:32)
+command.modesPushedForwards = forwurds
 
 # time moved backwards (e.g. Affected modes have been pushed back by 2:32)
+command.modesPushedBack = bak
 
 # amount of time a mode was pushed (e.g. by 1:00)
+command.modesPushedBy = bai
 
 # {0} = mode name (e.g. GOLD, Glass Mode)
+command.selectedModePushed = {0} wil begin innnnn
 
 # amount of time remaining (e.g. 1:00 left)
+command.timeLeft = lefty
 
 # {0} = number of players online
 command.list.online = Kittehs connectd\: {0}
@@ -96,3 +108,9 @@ command.message.blocked = {0} doesnt wnna chat naw.
 
 # {0} = map name
 command.maps.hover = punch 2 veiw {0}
+
+
+# {0} = player name
+
+# {0} = command name
+
