Update Catalan translations

--- a/util/src/main/i18n/translations/death_ca_ES.properties
+++ b/util/src/main/i18n/translations/death_ca_ES.properties
@@ -95,6 +95,7 @@ death.squash = {0} ha estat aixafat fins la mort
 
 # {0} = victim player name
 # {1} = killer player name
+death.squash.player = {0} ha estat aixafat fins la mort per {1}
 
 # {0} = victim player name
 # {2} = entity name (e.g. "Anvil")
@@ -110,12 +111,14 @@ death.suffocate = {0} s''ha sufocat
 
 # {0} = victim player name
 # {1} = killer player name
+death.suffocate.player = {0} ha estat ofegat per {1}
 
 # {0} = victim player name
 death.cactus = {0} ha intentat abraçar un cactus
 
 # {0} = victim player name
 # {1} = killer player name
+death.cactus.player = {0} ha intentat abraçar al cactus d''en {1}
 
 # {0} = victim player name
 # {1} = killer player name
@@ -670,6 +673,12 @@ death.respawn.confirmed.waiting = Tornaràs a aparèixer el més aviat possible.
 death.respawn.confirmed.waiting.flagDropped = Reviuràs quan la bandera caigui...
 
 # {0} = A player name
+deathScreen.title.spectator = {0} ha mort\!
 
+death.respawn.unconfirmed.spectator = Podeu fer clic esquerre per reaparèixer
 
+death.respawn.unconfirmed.time.spectator = Poden reaparèixer en {0} segons
 
+death.respawn.confirmed.waiting.spectator = Reapareixeran tan aviat com sigui possible...
+
+death.respawn.confirmed.waiting.flagDropped.spectator = Reapareixeran quan caigui la bandera...
