Update German translations

--- a/util/src/main/i18n/translations/death_de_DE.properties
+++ b/util/src/main/i18n/translations/death_de_DE.properties
@@ -6,13 +6,13 @@ death.predictedSuffix = (vorhergesagt)
 death.drown = {0} hat vergessen, zu atmen
 
 # {0} = victim player name
-death.lightning = {0} wurde von einem Blitz erschlagen
+death.lightning = {0} wurde vom Blitz getroffen
 
 # {0} = victim player name
 death.starve = {0} ist zu Tode verhungert
 
 # {0} = victim player name
-death.poison = {0} ist durch eine Vergiftung gestorben
+death.poison = {0} ist durch Vergiftung gestorben
 
 # {0} = victim player name
 death.wither = {0} ist verkümmert
