Update Italian translations

--- a/util/src/main/i18n/translations/death_it_IT.properties
+++ b/util/src/main/i18n/translations/death_it_IT.properties
@@ -673,6 +673,12 @@ death.respawn.confirmed.waiting = Resusciterai non appena sarà possibile...
 death.respawn.confirmed.waiting.flagDropped = Resusciterai quando la bandiera è lasciata cadere...
 
 # {0} = A player name
+deathScreen.title.spectator = {0} è morto\!
 
+death.respawn.unconfirmed.spectator = Possono cliccare il tasto sinistro per rinascere
 
+death.respawn.unconfirmed.time.spectator = Possono rinascere in {0}s
 
+death.respawn.confirmed.waiting.spectator = Rinasceranno il prima possibile...
+
+death.respawn.confirmed.waiting.flagDropped.spectator = Rinasceranno quando la bandiera sarà lasciata cadere...
