--- a/util/src/main/i18n/translations/death_es_CL.properties
+++ b/util/src/main/i18n/translations/death_es_CL.properties
@@ -673,6 +673,12 @@ death.respawn.confirmed.waiting = Reaparecerás tan pronto como sea posible...
 death.respawn.confirmed.waiting.flagDropped = Reaparecerás cuando la bandera sea soltada...
 
 # {0} = A player name
+deathScreen.title.spectator = ¡{0} murió\!
 
+death.respawn.unconfirmed.spectator = Podrán hacer click izquierdo para reaparecer
 
+death.respawn.unconfirmed.time.spectator = Podrán reaparecer en {0}s
 
+death.respawn.confirmed.waiting.spectator = Podrán reaparecer lo antes posible...
+
+death.respawn.confirmed.waiting.flagDropped.spectator = Reaparecerán cuando la bandera sea soltada...
