Update LOLCAT translations

--- a/util/src/main/i18n/translations/death_lol_US.properties
+++ b/util/src/main/i18n/translations/death_lol_US.properties
@@ -673,6 +673,12 @@ death.respawn.confirmed.waiting = U wull remeow asap dud...
 death.respawn.confirmed.waiting.flagDropped = Wen kittn flag of fur falls u will remeow...
 
 # {0} = A player name
+deathScreen.title.spectator = {0} ded\!
 
+death.respawn.unconfirmed.spectator = katz can levt clic 2 respon
 
+death.respawn.unconfirmed.time.spectator = katz can respon in {0}s
 
+death.respawn.confirmed.waiting.spectator = katz wil respon as sun az possibilie
+
+death.respawn.confirmed.waiting.flagDropped.spectator = katz wil respon whenevur da flag iz dropd
