Update French translations

--- a/util/src/main/i18n/translations/gamemode_fr_FR.properties
+++ b/util/src/main/i18n/translations/gamemode_fr_FR.properties
@@ -18,7 +18,9 @@ gamemode.ad.name = Attack/Defend
 
 gamemode.cp.name = Contrôle de Point
 
-gamemode.koth.name = Kind of the Hill
+gamemode.koth.name = King of the Hill
+
+gamemode.pd.name = Convoi
 
 gamemode.blitz.name = Blitz
 
@@ -29,6 +31,8 @@ gamemode.br.name = Blitz \: Rage
 gamemode.rfw.name = Course pour la laine
 
 gamemode.scorebox.name = Scorebox
+
+gamemode.skywars.name = Skywars
 
 gamemode.arcade.name = Arcade
 
@@ -58,6 +62,8 @@ gamemode.cp.acronym = CP
 
 gamemode.koth.acronym = KotH
 
+gamemode.pd.acronym = CV
+
 gamemode.blitz.acronym = Blitz
 
 gamemode.rage.acronym = Rage
@@ -67,6 +73,8 @@ gamemode.br.acronym = Blitz \: Rage
 gamemode.rfw.acronym = RFW
 
 gamemode.scorebox.acronym = Scorebox
+
+gamemode.skywars.acronym = Skywars
 
 gamemode.arcade.acronym = Arcade
 
