Update Catalan translations

--- a/util/src/main/i18n/translations/gamemode_ca_ES.properties
+++ b/util/src/main/i18n/translations/gamemode_ca_ES.properties
@@ -1,3 +1,4 @@
+gamemode.generic.name = Objectius
 
 gamemode.dtc.name = Destrueix el Core
 
@@ -7,26 +8,39 @@ gamemode.ctw.name = Captura la Llana
 
 gamemode.ctf.name = Captura la Bandera
 
+gamemode.ffb.name = Bandera de futbol
 
+gamemode.kotf.name = Rei de la Bandera
 
+gamemode.tdm.name = Combat a mort
 
 gamemode.ad.name = Atacar/Defensar
 
+gamemode.cp.name = Controlar el punt
 
 gamemode.koth.name = Rei del turó
+
+gamemode.pd.name = Càrrega
 
 gamemode.blitz.name = Blitz
 
 gamemode.rage.name = Rage
 
+gamemode.br.name = Blitz\: Rage
 
+gamemode.rfw.name = Carrera per la llana
 
 gamemode.scorebox.name = Quadre de puntuació
 
+gamemode.skywars.name = Guerres del cel
+
 gamemode.arcade.name = Arcade
 
+gamemode.ffa.name = Tothom s'hi pot unir
 
+gamemode.mixed.name = Barrejat
 
+gamemode.generic.acronym = Objectius
 
 gamemode.dtc.acronym = DTC
 
@@ -36,39 +50,63 @@ gamemode.ctw.acronym = CTW
 
 gamemode.ctf.acronym = CTF
 
+gamemode.ffb.acronym = FFB
 
+gamemode.kotf.acronym = KotF
 
 gamemode.tdm.acronym = TDM
 
 gamemode.ad.acronym = A/D
 
+gamemode.cp.acronym = CP
 
+gamemode.koth.acronym = KotH
+
+gamemode.pd.acronym = PD
 
 gamemode.blitz.acronym = Blitz
 
 gamemode.rage.acronym = Rage
 
+gamemode.br.acronym = Blitz\: Rage
 
+gamemode.rfw.acronym = CPLL
 
 gamemode.scorebox.acronym = Quadre de puntuació
+
+gamemode.skywars.acronym = Guerres del cel
 
 gamemode.arcade.acronym = Arcade
 
 gamemode.ffa.acronym = FFA
 
+gamemode.mixed.acronym = Barrejat
 
+objective.name.monument = Monument
 
+objective.name.antenna = Antena
 
+objective.name.orb = Orb
 
+objective.name.inhibitor = Inhibidor
 
+objective.name.tower = Torre
 
+objective.name.pillar = Pilar
 
+objective.name.base = Base
 
+objective.name.ship = Vaixell
 
+objective.name.core = Nucli
 
+objective.name.reactor = Reactor
 
+objective.name.engine = Motor
 
+objective.name.flag = Bandera
 
+objective.name.wool = Llana
 
 # {0} = objective mode (e.g. "Gold Core Mode")
 # {1} = time remaining (e.g. "30 seconds")
@@ -84,19 +122,25 @@ objective.credit.many = molts, molts jugadors
 objective.credit.unknown = forces desconegudes
 
 # {0} = objective name
+objective.credit.future = Rebrà un crèdit quan s''hagi completat {0}
 
 # {0} = objective name (e.g. "Left Core")
+objective.damageOwn = No podeu danyar el vostre propi {0}
 
 # {0} = objective name
+objective.repairOther = No podeu reparar el {0} de l''enemic
 
 # {0} = objective name
+objective.repairDisabled = No teniu permís de reparar el vostre propi {0}.
 
 # {0} = player name
 # {1} = monument name (e.g. "Monument A")
 # {2} = team name
+destroyable.complete.owned = {2} ''{1} ha estat destruït per {0}
 
 # {0} = player name
 # {1} = monument name
+destroyable.complete = {1} ha sigut destruït per {0}
 
 # {0} = player name
 # {1} = monument name
@@ -116,15 +160,19 @@ destroyable.touch.owned = El {1} del {2} ha sigut danyat
 destroyable.touch.player = {1} ha sigut danyat per {0}
 
 # {1} = monument name
+destroyable.touch.you = Heu malmès {1}
 
 # {1} = monument name
+destroyable.touch = {1} s''ha fet mal
 
 # {0} = player name
 # {1} = core name (e.g. "Right Core")
 # {2} = team name
+core.complete.owned = {2} ''{1} s''ha trencat per {0}
 
 # {0} = player name
 # {1} = core name
+core.complete = {1} s''ha trencat per {0}
 
 # {0} = player name
 # {1} = wool name (e.g "Red Wool")
@@ -133,13 +181,16 @@ wool.complete.owned = {0} ha col·locat la {1} pel {2}
 
 # {0} = player name
 # {1} = wool name
+wool.complete = {0} ha col·locat {1}
 
 # {0} = player name
 # {1} = wool name
 # {2} = team name
+wool.touch.owned.player = {1} ha agafat l''usuari {0} per {2}
 
 # {0} = player name
 # {1} = wool name
+wool.touch.player = {1} ha agafat l''usuari {0}
 
 # {1} = wool name
 # {2} = team name
@@ -150,10 +201,13 @@ wool.touch.you = Has agafat la {1}
 
 # {0} = team name
 # {1} = wool name
+wool.wrongTeam = Només un membre de {0} hi pot col·locar {1} allà
 
 # {0} = wool name
+wool.wrongWool = Només es permet col·locar {0}
 
 # {0} = wool name
+wool.craftingDisabled = No teniu permís per crear {0}
 
 # {0} = flag name (e.g. "Green Flag")
 # {1} = player name
@@ -180,13 +234,16 @@ flag.return = {0} ha sigut retornada
 
 # {0} = flag name
 # {1} = duration (e.g. "5 seconds")
+flag.willRespawn = {0} reviurà en {1}
 
 # {0} = flag name
 # {1} = post name
 # {2} = duration
+flag.willRespawn.named = {0} reviurà a {1} en {2}
 
 # {0} = flag name
 # {1} = post name
+flag.willRespawn.next = {0} reviurà en {1}
 
 # {0} = flag name
 flag.respawn = La {0} ha reaparegut
@@ -216,6 +273,10 @@ blitz.livesRemaining = Tens {0} restant.
 # {0} = "Blitz"
 blitz.joinDenied = No podeu unir-vos durant una partida de tipus {0}.
 
+victoryCondition.blitz = majoria de supervivents
 
+victoryCondition.goals = majoria de objectius
 
+victoryCondition.tie = ningú ha guanyat
 
+victoryCondition.score = puntuació més alta
