Update Italian translations

--- a/util/src/main/i18n/translations/gamemode_it_IT.properties
+++ b/util/src/main/i18n/translations/gamemode_it_IT.properties
@@ -8,7 +8,9 @@ gamemode.ctw.name = Captare the Wool
 
 gamemode.ctf.name = Cattura la Bandiera
 
+gamemode.ffb.name = Calcio con la Bandiera
 
+gamemode.kotf.name = Re della Bandiera
 
 gamemode.tdm.name = Deathmatch
 
@@ -18,18 +20,25 @@ gamemode.cp.name = Controlla il Punto
 
 gamemode.koth.name = Re della Collina
 
+gamemode.pd.name = Carico
+
 gamemode.blitz.name = Blitz
 
 gamemode.rage.name = Rage
 
+gamemode.br.name = Blitz\: Furia
 
+gamemode.rfw.name = Gara per la Lana
 
 gamemode.scorebox.name = Scorebox
+
+gamemode.skywars.name = Skywars
 
 gamemode.arcade.name = Arcade
 
 gamemode.ffa.name = Free for All
 
+gamemode.mixed.name = Misto
 
 gamemode.generic.acronym = Obiettivi
 
@@ -41,7 +50,9 @@ gamemode.ctw.acronym = CTW
 
 gamemode.ctf.acronym = CTF
 
+gamemode.ffb.acronym = FFB
 
+gamemode.kotf.acronym = KotF
 
 gamemode.tdm.acronym = TDM
 
@@ -49,19 +60,27 @@ gamemode.ad.acronym = A/D
 
 gamemode.cp.acronym = CP
 
+gamemode.koth.acronym = KotH
+
+gamemode.pd.acronym = PD
 
 gamemode.blitz.acronym = Blitz
 
 gamemode.rage.acronym = Rage
 
+gamemode.br.acronym = Blitz\: Rage
 
+gamemode.rfw.acronym = RFW
 
 gamemode.scorebox.acronym = Scorebox
+
+gamemode.skywars.acronym = Skywars
 
 gamemode.arcade.acronym = Arcade
 
 gamemode.ffa.acronym = FFA
 
+gamemode.mixed.acronym = Misto
 
 objective.name.monument = Monumento
 
@@ -73,6 +92,7 @@ objective.name.inhibitor = Inibitore
 
 objective.name.tower = Torre
 
+objective.name.pillar = Pillar
 
 objective.name.base = Base
 
