Update Russian translations

--- a/util/src/main/i18n/translations/gamemode_ru_RU.properties
+++ b/util/src/main/i18n/translations/gamemode_ru_RU.properties
@@ -8,9 +8,9 @@ gamemode.ctw.name = Захват шерсти
 
 gamemode.ctf.name = Захват флага
 
-gamemode.ffb.name = Flag Football
+gamemode.ffb.name = Флаг-футбол
 
-gamemode.kotf.name = King of the Flag
+gamemode.kotf.name = Удержание флага
 
 gamemode.tdm.name = Бой насмерть
 
@@ -19,6 +19,8 @@ gamemode.ad.name = Атака/Защита
 gamemode.cp.name = Захват точки
 
 gamemode.koth.name = Царь горы
+
+gamemode.pd.name = Сопровождение
 
 gamemode.blitz.name = Блиц
 
@@ -29,6 +31,8 @@ gamemode.br.name = Blitz\: RAGE
 gamemode.rfw.name = Гонка за шерстью
 
 gamemode.scorebox.name = Scorebox
+
+gamemode.skywars.name = SkyWars
 
 gamemode.arcade.name = Аркада
 
@@ -58,6 +62,8 @@ gamemode.cp.acronym = CP
 
 gamemode.koth.acronym = KotH
 
+gamemode.pd.acronym = PD
+
 gamemode.blitz.acronym = Блиц
 
 gamemode.rage.acronym = RAGE
@@ -67,6 +73,8 @@ gamemode.br.acronym = Blitz\: RAGE
 gamemode.rfw.acronym = RFW
 
 gamemode.scorebox.acronym = Scorebox
+
+gamemode.skywars.acronym = SkyWars
 
 gamemode.arcade.acronym = Аркада
 
