--- a/util/src/main/i18n/translations/gamemode_es_CL.properties
+++ b/util/src/main/i18n/translations/gamemode_es_CL.properties
@@ -8,7 +8,9 @@ gamemode.ctw.name = Captura la Lana
 
 gamemode.ctf.name = Captura la Bandera
 
+gamemode.ffb.name = Flag Football
 
+gamemode.kotf.name = King of the Flag
 
 gamemode.tdm.name = Deathmatch
 
@@ -18,18 +20,24 @@ gamemode.cp.name = Puntos de control
 
 gamemode.koth.name = King of the Hill
 
+
 gamemode.blitz.name = Blitz
 
 gamemode.rage.name = Rage
 
+gamemode.br.name = Blitz\: Rage
 
+gamemode.rfw.name = Race for Wool
 
 gamemode.scorebox.name = Scorebox
+
+gamemode.skywars.name = Skywars
 
 gamemode.arcade.name = Arcade
 
 gamemode.ffa.name = Todos contra todos
 
+gamemode.mixed.name = Mixed
 
 gamemode.generic.acronym = Objetivos
 
@@ -41,7 +49,9 @@ gamemode.ctw.acronym = CTW
 
 gamemode.ctf.acronym = CTF
 
+gamemode.ffb.acronym = FFB
 
+gamemode.kotf.acronym = KotF
 
 gamemode.tdm.acronym = TDM
 
@@ -49,19 +59,26 @@ gamemode.ad.acronym = A/D
 
 gamemode.cp.acronym = CP
 
+gamemode.koth.acronym = KotH
+
 
 gamemode.blitz.acronym = Blitz
 
 gamemode.rage.acronym = Rage
 
+gamemode.br.acronym = Blitz\: Rage
 
+gamemode.rfw.acronym = RFW
 
 gamemode.scorebox.acronym = Scorebox
+
+gamemode.skywars.acronym = Skywars
 
 gamemode.arcade.acronym = Arcade
 
 gamemode.ffa.acronym = FFA
 
+gamemode.mixed.acronym = Mixed
 
 objective.name.monument = Monumento
 
@@ -73,6 +90,7 @@ objective.name.inhibitor = Inhibidor
 
 objective.name.tower = Torre
 
+objective.name.pillar = Pilar
 
 objective.name.base = Base
 
