Update English, United Kingdom translations

--- a/util/src/main/i18n/translations/gamemode_en_GB.properties
+++ b/util/src/main/i18n/translations/gamemode_en_GB.properties
@@ -20,6 +20,8 @@ gamemode.cp.name = Control the Point
 
 gamemode.koth.name = King of the Hill
 
+gamemode.pd.name = Payload
+
 gamemode.blitz.name = Blitz
 
 gamemode.rage.name = Rage
@@ -29,6 +31,8 @@ gamemode.br.name = Blitz\: Rage
 gamemode.rfw.name = Race for Wool
 
 gamemode.scorebox.name = Scorebox
+
+gamemode.skywars.name = Skywars
 
 gamemode.arcade.name = Arcade
 
@@ -58,6 +62,8 @@ gamemode.cp.acronym = CP
 
 gamemode.koth.acronym = KotH
 
+gamemode.pd.acronym = PD
+
 gamemode.blitz.acronym = Blitz
 
 gamemode.rage.acronym = Rage
@@ -67,6 +73,8 @@ gamemode.br.acronym = Blitz\: Rage
 gamemode.rfw.acronym = RFW
 
 gamemode.scorebox.acronym = Scorebox
+
+gamemode.skywars.acronym = Skywars
 
 gamemode.arcade.acronym = Arcade
 
