Update LOLCAT translations

--- a/util/src/main/i18n/translations/gamemode_lol_US.properties
+++ b/util/src/main/i18n/translations/gamemode_lol_US.properties
@@ -20,6 +20,7 @@ gamemode.cp.name = CTRL da point
 
 gamemode.koth.name = King Kat of da Pile
 
+
 gamemode.blitz.name = limitd kat lives
 
 gamemode.rage.name = Angreh
@@ -29,6 +30,8 @@ gamemode.br.name = Blizt\: Cat RAGE
 gamemode.rfw.name = Supersped fo Fluffy
 
 gamemode.scorebox.name = Scoah Boxz
+
+gamemode.skywars.name = skiwars
 
 gamemode.arcade.name = kat playground
 
@@ -58,6 +61,7 @@ gamemode.cp.acronym = cp
 
 gamemode.koth.acronym = KKodP
 
+
 gamemode.blitz.acronym = limitd kat lives
 
 gamemode.rage.acronym = Angreh
@@ -67,6 +71,8 @@ gamemode.br.acronym = Blizt\: Cat RAGE
 gamemode.rfw.acronym = SfF
 
 gamemode.scorebox.acronym = Scoah Boxz
+
+gamemode.skywars.acronym = skiwars
 
 gamemode.arcade.acronym = kat playground
 
