Update Romanian translations

--- a/util/src/main/i18n/translations/map_ro_RO.properties
+++ b/util/src/main/i18n/translations/map_ro_RO.properties
@@ -112,6 +112,10 @@ pool.matching = {0} este deja mulțimea de hărți actuală
 
 pool.mapPoolsDisabled = Mulțimile de hărți sunt dezactivate momentan
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 vote.noVote = Nu este nimic de votat momentan
 
 vote.title.map = Vot pentru hartă
