Update French translations

--- a/util/src/main/i18n/translations/map_fr_FR.properties
+++ b/util/src/main/i18n/translations/map_fr_FR.properties
@@ -115,6 +115,13 @@ pool.matching = {0} est déja le map pool actuel
 
 pool.mapPoolsDisabled = Les maps pools sont actuellement désactivées
 
+# {0} = map pool name (e.g. "Nano")
+pool.locked = L''actuelle map pool ({0}) est verrouillé
+
+pool.locked.button = Déverrouiller
+
+pool.locked.hover = Cliquer pour déverrouiller la map pool
+
 vote.noVote = Il n'y a rien sur quoi voter actuellement
 
 vote.title.map = Map Vote
