Update Spanish translations

--- a/util/src/main/i18n/translations/map_es_ES.properties
+++ b/util/src/main/i18n/translations/map_es_ES.properties
@@ -115,6 +115,10 @@ pool.matching = {0} ya es la pool de mapas activa
 
 pool.mapPoolsDisabled = Las pools de mapas están desactivadas
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 vote.noVote = No hay nada que votar ahora mismo
 
 vote.title.map = Votacion de mapas
