Update Afrikaans translations

--- a/util/src/main/i18n/translations/map_af_ZA.properties
+++ b/util/src/main/i18n/translations/map_af_ZA.properties
@@ -83,6 +83,10 @@ map.protectPortal = Jy mag nie hierdie area belemmer
 # {0} = map pool name (e.g. "Mega")
 
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 
 
 
