Update Arabic translations

--- a/util/src/main/i18n/translations/map_ar_SA.properties
+++ b/util/src/main/i18n/translations/map_ar_SA.properties
@@ -85,6 +85,10 @@ map.protectPortal = أنت لا تستطيع أن تخرب هذه المنطقة
 # {0} = map pool name (e.g. "Mega")
 
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 
 
 
