Update Catalan translations

--- a/util/src/main/i18n/translations/map_ca_ES.properties
+++ b/util/src/main/i18n/translations/map_ca_ES.properties
@@ -12,6 +12,7 @@ map.info.genre = Gènere
 
 map.info.tags = Etiquetes
 
+map.info.created = Creat
 
 map.info.author.singular = Autor/a
 
@@ -21,6 +22,7 @@ map.info.contributors = Contribuïdors/es
 
 map.info.rules = Regles
 
+map.info.playerLimit = Maxim de jugadors
 
 map.info.playerLimit.vs = vs
 
@@ -34,9 +36,11 @@ map.info.source = Origen
 
 map.info.folder = Carpeta
 
+map.info.pools = Rotacions
 
 map.info.objective = Objectiu
 
+map.info.phase = Fase
 
 # {0} = name of a maptag (e.g "#tnt" or "#controlpoint")
 map.info.mapTag.hover = Feu clic per mostrar tots els {0} mapes
@@ -46,14 +50,17 @@ map.nextMap = Mapa següent\: {0}
 
 # {0} = player name (who set the map)
 # {1} = map name
+map.setNext = {0} ha ficat com a següent mapa\: {1}
 
 map.setNext.confirm = No pots establir un mapa com a següent quan una reinicialització està en procès. Usa -f per saltar-t'ho.
 
 # {0} = player name (who unset the map)
 # {1} = name of map that was unset
+map.setNext.revert = {0} ha suprimit {1} com a mapa següent
 
 map.noNextMap = No hi ha cap mapa següent
 
+map.info.commandHint = Escriu {0} per obtenir més informació
 
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
@@ -69,7 +76,9 @@ map.cycled = Mapa canviat
 
 map.protectPortal = No pots obstruir aquesta àrea
 
+map.phase.production = Producció
 
+map.phase.development = Desenvolupament
 
 # {0} = map pool name (e.g. "Mega")
 pool.change = El conjunt de mapes s''ha establert en {0} per tal d''ajustar-se millor al recompte de jugadors actual.
@@ -77,52 +86,78 @@ pool.change = El conjunt de mapes s''ha establert en {0} per tal d''ajustar-se m
 
 # {0} = map pool name (e.g. "Mega")
 # {1} = player name
+pool.change.force = {1} ha canviat la rotació de mapes a {0}
 
 # {0} = map pool name (e.g. "Mega")
 # {1} = a duration (e.g. "2 hours")
 # {2} = player name
+pool.change.forceTimed = {2} ha canviat la rotació de mapes a {0} per {1}
 
 # {0} = number of positions
 pool.skip = Saltat un total de {0} posicions.
 
 pool.skip.negative = No pots saltar les posicions negatives\!
 
+pool.name = Mapes de la rotació
 
+pool.title = Rotacions de mapes
 
 pool.noPoolMatch = Cap grup de mapes coincideix amb la descripció
 
+pool.noDynamic = No s'ha trobat cap grup de mapes
 
 pool.noRotation = Actualment no s’utilitza cap rotació
 
 pool.noMapPools = No hi ha cap agrupació de mapes carregats
 
 # {0} = map pool name (e.g. "Mega")
+pool.matching = {0} ja és el conjunt de mapes actual
 
 pool.mapPoolsDisabled = Els grups de mapes estan actualment desactivats
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
+vote.noVote = No hi ha res per votar ara mateix
 
 vote.title.map = Vota el mapa
 
+vote.header.map = Feu clic a tots els mapes que voleu jugar\:
 
 # {0} = option name (e.g. "Airship Battle")
+vote.for = Heu votat per {0}
 
 # {0} = option name (e.g. "Airship Battle")
+vote.against = Has votat en contra de {0}
 
 # {0} = option name (e.g. "Airship Battle")
+vote.abstain = Ha suprimit el teu vot per {0}
 
+vote.disabled = La votació està desactivada
 
+vote.modify.disallow = En aquest moment no es pot modificar el vot
 
 # {0} = player name (who added the map)
 # {1} = map name 
+vote.add = {0} ha afegit {1} com a vot
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+vote.remove = {0} ha tret com a vot el mapa {1}
 
+vote.limit = S'ha arribat al límit de selecció del vot
 
+vote.title.selection = Mapes seleccionats
 
 # {0} = player name (who toggled mode)
 # {1} = mode name
+vote.toggle = {0} ha canviat el mode de vot a {1}
 
+vote.mode.replace = Substituir
 
+vote.mode.create = Crear
 
+vote.mode.hover = Clica per canviar el mode de vot
 
+vote.noMapsFound = No hi ha mapes per esborrar de la votació
