--- a/util/src/main/i18n/translations/map_da_DK.properties
+++ b/util/src/main/i18n/translations/map_da_DK.properties
@@ -84,6 +84,10 @@ map.protectPortal = Du kan ikke blokere dette område
 # {0} = map pool name (e.g. "Mega")
 
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 
 
 
