Update German translations

--- a/util/src/main/i18n/translations/map_de_DE.properties
+++ b/util/src/main/i18n/translations/map_de_DE.properties
@@ -115,6 +115,10 @@ pool.matching = {0} ist bereits der aktuelle Map-Pool
 
 pool.mapPoolsDisabled = Map-Pools sind derzeit deaktiviert
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 vote.noVote = Momentan gibt es keine Abstimmung
 
 vote.title.map = Map-Abstimmung
