Update Italian translations

--- a/util/src/main/i18n/translations/map_it_IT.properties
+++ b/util/src/main/i18n/translations/map_it_IT.properties
@@ -115,6 +115,10 @@ pool.matching = {0} è già il pool di mappe attuale
 
 pool.mapPoolsDisabled = I pool di mappe sono attualmente disabilitati
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 vote.noVote = Non c'è nulla per cui votare in questo momento
 
 vote.title.map = Voto Mappa
