Update Japanese translations

--- a/util/src/main/i18n/translations/map_ja_JP.properties
+++ b/util/src/main/i18n/translations/map_ja_JP.properties
@@ -112,6 +112,10 @@ pool.matching = {0} プールは既に設定されています
 
 pool.mapPoolsDisabled = 現在マッププールは無効化されています
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 vote.noVote = 現在実施中の投票はありません
 
 vote.title.map = マップ投票
